[package]
name = "sheth"
version = "0.1.0"
authors = ["Matt Garnett <14004106+lightclient@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false

[dependencies]
arrayref = "0.3.5"
sha2 = "0.8.0"
bigint = "4.4.1"
hex = "0.3.2"
qimalloc = "0.1.0"

[features]
default = ["std"]
std = []
scout = []
