[package]
name = "sheth"
version = "0.1.0"
authors = ["Matt Garnett <14004106+lightclient@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "sheth"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "binsheth"
path = "src/main.rs"

[features]
default = ["std"]
std = []
scout = []

[profile.release]
lto = true
debug = false

[dependencies]
arrayref = "0.3.5"
sha2 = "0.8.0"
bigint = "4.4.1"
hex = "0.3.2"
qimalloc = "0.1.0"

[dev-dependencies]
criterion = "0.3"
ewasm = "0.1.0"
composer = { path = "./composer" }

[[bench]]
name = "execution"
harness = false
