[package]
name = "client"
version = "0.1.0"
authors = ["Matt Garnett <14004106+lightclient@users.noreply.github.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
bigint = "4.4.1"
clap = "2.33.0"
composer = { path = "../composer" }
dialoguer = "0.4.0"
hex = "0.3.2"
imp = "0.0.1"
reqwest = "0.9.20"
sheth = { path = "../", features = ["std"] }
